// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentWorkspace page "loading" content renders correctly 1`] = `"<NonIdealState className=\\"WorkspaceParent pt-dark\\" description=\\"Getting mission ready...\\" visual={{...}} />"`;

exports[`AssessmentWorkspace page with MCQ question renders correctly 1`] = `
"<div className=\\"WorkspaceParent pt-dark\\">
  <Blueprint2.Dialog className=\\"assessment-briefing\\" isOpen={false} canOutsideClickClose={true}>
    <Blueprint2.Card elevation={0} interactive={false}>
      <div dangerouslySetInnerHTML={{...}} />
      <Blueprint2.Button className=\\"assessment-briefing-button\\" onClick={[Function: onClick]} text=\\"Continue\\" />
    </Blueprint2.Card>
  </Blueprint2.Dialog>
  <Workspace controlBarProps={{...}} editorProps={[undefined]} editorWidth=\\"50%\\" handleEditorWidthChange={[Function: handleEditorWidthChange]} handleSideContentHeightChange={[Function: handleSideContentHeightChange]} hasUnsavedChanges={false} mcqProps={{...}} sideContentHeight={[undefined]} sideContentProps={{...}} replProps={{...}} />
</div>"
`;

exports[`AssessmentWorkspace page with overdue assessment renders correctly 1`] = `
"<div className=\\"WorkspaceParent pt-dark\\">
  <Blueprint2.Dialog className=\\"assessment-briefing\\" isOpen={true} canOutsideClickClose={true}>
    <Blueprint2.Card elevation={0} interactive={false}>
      <div dangerouslySetInnerHTML={{...}} />
      <Blueprint2.Button className=\\"assessment-briefing-button\\" onClick={[Function: onClick]} text=\\"Continue\\" />
    </Blueprint2.Card>
  </Blueprint2.Dialog>
  <Workspace controlBarProps={{...}} editorProps={{...}} editorWidth=\\"50%\\" handleEditorWidthChange={[Function: handleEditorWidthChange]} handleSideContentHeightChange={[Function: handleSideContentHeightChange]} hasUnsavedChanges={false} mcqProps={{...}} sideContentHeight={[undefined]} sideContentProps={{...}} replProps={{...}} />
</div>"
`;

exports[`AssessmentWorkspace page with programming question renders correctly 1`] = `
"<div className=\\"WorkspaceParent pt-dark\\">
  <Blueprint2.Dialog className=\\"assessment-briefing\\" isOpen={true} canOutsideClickClose={true}>
    <Blueprint2.Card elevation={0} interactive={false}>
      <div dangerouslySetInnerHTML={{...}} />
      <Blueprint2.Button className=\\"assessment-briefing-button\\" onClick={[Function: onClick]} text=\\"Continue\\" />
    </Blueprint2.Card>
  </Blueprint2.Dialog>
  <Workspace controlBarProps={{...}} editorProps={{...}} editorWidth=\\"50%\\" handleEditorWidthChange={[Function: handleEditorWidthChange]} handleSideContentHeightChange={[Function: handleSideContentHeightChange]} hasUnsavedChanges={false} mcqProps={{...}} sideContentHeight={[undefined]} sideContentProps={{...}} replProps={{...}} />
</div>"
`;
